Fixed task start / stop. Added details collapsing

--- a/src/Cuckoo.Spa/Content/timer.css
+++ b/src/Cuckoo.Spa/Content/timer.css
@@ -14,10 +14,39 @@
 
 /* #region Tasks*/
 #tasks.list-group .list-group-item.active {
-    color: #468847;
     background-color: #dff0d8;
+}
+#tasks.list-group .list-group-item.active,
+#tasks.list-group .list-group-item.active .table,
+#tasks.list-group .list-group-item.active .table thead > tr > th,
+#tasks.list-group .list-group-item.active .table tbody > tr > td {
     border-color: #d6e9c6;
 }
 
+#tasks.list-group .list-group-item.active .table,
+#tasks.list-group .list-group-item.active .table thead > tr > th,
+#tasks.list-group .list-group-item.active .table tbody > tr > td {
+    background-color: #dff0d8;
+}
+
+#tasks.list-group .list-group-item.active,
+#tasks.list-group .list-group-item.active .list-group-item-text {
+    color: #468847;
+}
+
+
+
+#tasks.list-group .list-group-item {
+    padding: 0;
+}
+
+#tasks.list-group .list-group-item .list-group-item-body {
+    padding: 10px 15px;
+}
+
+.list-group-item > .list-group-item-body + .table {
+border-top: 1px solid #dddddd;
+margin-bottom: 0;
+}
 
 /* #endregion */
